# webpage-feature-extraction

./: .gitignore  README.md  main.py  pyproject.toml
feature_extractor/: blacklist_approach.py  capture_processor.py  feature_extractor.py  har_features.py  helpers.py  main.py  zip_processor.py
scripts/: keyword_extraction.py
tests/: test_capture_processor.py  test_feature_extractor.py  test_main.py  test_zip_processor.py
tests/testprograms/: capturemaker.py  extractids.py  prepare-data.py  save_zip.py  services.py  test.py  train_rf.py  wordclouding.py
